# hybrid_hrm_ebm_agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
hybrid_agent/: config.py  logging_setup.py  run_agent.py
hybrid_agent/decoding/: energy_guided_decoding.py
hybrid_agent/docs/: RESEARCH.md
hybrid_agent/envs/: osworld_wrapper.py  swebench_wrapper.py  webarena_wrapper.py
hybrid_agent/eval/: eval_gaia.py  eval_osworld.py  eval_swebench.py
hybrid_agent/models/: ebm.py  hrm.py  transformer_llm.py
hybrid_agent/tools/: code_tools.py  os_tools.py
hybrid_agent/train/: train_ebm.py  train_rl.py  train_sft.py
tests/: test_code_tools.py  test_energy_guided_decoding.py
