[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-agent"
version = "0.1.0"
description = "Hybrid HRM+EBM agent skeleton"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "zazula" }]
license = { text = "MIT" }
dependencies = [
  "torch>=2.1",
  "numpy",
  "regex",
  "tqdm",
]

[tool.setuptools.packages.find]
include = ["hybrid_agent*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = false

autocomplete_from_environment = true

[tool.pytest.ini_options]
addopts = "-q"
